Front Base, Profil ~OK, Index ~OK, Admin pas OK

--- a/back-end/templates/email/confirmation.hbs
+++ b/back-end/templates/email/confirmation.hbs
@@ -1,4 +1,4 @@
 <p>Bonjour {{ user.email.data }},</p>
-        <p>Vous avez demandé la création d'un compte afin d'accéder à notre application, nous vous informons que votre compte vient d'être activé.</p>
+        <p>Vous avez demandé la création d'un compte afin d'accéder à notre application, nous vous informons que votre compte sera activé prochainement.</p>
         <p>Si vous n'êtes pas l'auteur de cette demande veuillez vous rapprochez de nos services.</p>
         <p>Cordialement,<br/>L'équipe MMA Baisieux</p>
