--- a/back-end/templates/email/reset-password.hbs
+++ b/back-end/templates/email/reset-password.hbs
@@ -2,4 +2,4 @@
 <p>Vous avez demandé une réinitialisation de votre mot de passe. Veuillez cliquer sur le lien suivant pour procéder à la réinitialisation :</p>
 <a href="{{resetUrl}}">Réinitialiser le mot de passe</a>
 <p>Si vous n'avez pas demandé cette réinitialisation, veuillez ignorer cet email.</p>
-<p>Cordialement,<br/>L'équipe de votre application</p>
+<p>Cordialement,<br/>L'équipe MMA Baisieux</p>
