--- a/back-end/templates/email/suppression.hbs
+++ b/back-end/templates/email/suppression.hbs
@@ -1,4 +1,4 @@
-<p>Bonjour {{ user.email.data }},</p>
+<p>Bonjour {{ user.email }},</p>
 <p>Vous avez demandé la suppression de votre compte, nous vous informons que votre compte
     est désormais supprimé.</p>
 <p>Si vous n'êtes pas l'auteur de cette demande veuillez vous rapprochez de nos services.</p>
