--- a/back-end/templates/email/reset-password.hbs
+++ b/back-end/templates/email/reset-password.hbs
@@ -1,4 +1,4 @@
-<p>Bonjour {{user.email.data}},</p>
+<p>Bonjour {{user.email}},</p>
 <p>Vous avez demandé une réinitialisation de votre mot de passe. Veuillez cliquer sur le lien suivant pour procéder à la réinitialisation :</p>
 <a href="{{resetUrl}}">Réinitialiser le mot de passe</a>
 <p>Si vous n'avez pas demandé cette réinitialisation, veuillez ignorer cet email.</p>
